--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,11 +3,17 @@
 
 <%- include('./partials/header.ejs') %>
 
-    <div class="container">
-        <h5>Login</h5>
-    </div>
-    <div class="container">
-        <a class="btn btn-secondary" href="/">Home</a>
-    </div>
+<div class="container">
+    <div class="card mx-auto mt-5" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Bem vindo</h5>
+          <h6 class="card-subtitle mb-2 text-muted">Agende seu serviço online</h6>
+          <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+          <a class="btn btn-secondary" href="/cadastro">Cadastrar</a>
+          <a class="btn btn-secondary" href="/index">Entrar</a>
+        </div>
+      </div>
+    
+</div>
     
 <%- include ('./partials/footer.ejs') %>
