--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,8 @@
 
 <body>
 
-    <div class="container bg-light">
-        <h3>LOGO BONITONA</h3>
-    </div>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand  mx-auto" href="#">
+        <img src="/img/logo.jpg" width="150" height="50" alt="">
+    </a>
+</nav>
