--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,12 +2,28 @@
 <html lang="pt-br">
 
 <%- include('./partials/header.ejs') %>
-
-    <div class="container">
+    <div class="container w-50">
         <h5>Cadastrar-se</h5>
     </div>
-    <div class="container">
-        <a class="btn btn-secondary" href="/">Home</a>
-    </div>
+
+<div class="container w-50">
+    <form>
+        <div class="form-group ">
+          <label for="exampleInputEmail1">Endereço de email</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
+          <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Senha</label>
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+        </div>
+        <div class="form-group form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Aceito os termos de uso</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </form>
+</div>
+
     
 <%- include ('./partials/footer.ejs') %>
