--- a/views/new.ejs
+++ b/views/new.ejs
@@ -2,11 +2,10 @@
 <html lang="pt-br">
 
 <%- include('./partials/header.ejs') %>
+<%- include('./partials/menu.ejs') %>
 
     <div class="container">
         <h5>Nova Solicitação</h5>
     </div>
-    <div class="container">
-        <a class="btn btn-secondary" href="/">home</a>
-    </div>
+
 <%- include ('./partials/footer.ejs') %>
