--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,13 +2,11 @@
 <html lang="pt-br">
 
 <%- include('./partials/header.ejs') %>
-
+<%- include('./partials/menu.ejs') %>
     <div class="container">
-        <h5>Meu perfil</h5>
+        <h5>Meus dados</h5>
     </div>
     
-    <div class="container">
-        <a class="btn btn-secondary" href="/">Home</a>
-    </div>
+
     
 <%- include ('./partials/footer.ejs') %>
