--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,5 @@
 <html lang="pt-br">
 
 <%- include('./partials/header.ejs') %>
-<%- include('./partials/menu.ejs') %>
-
-    <div class="container">
-        <h5>Página Principal</h5>
-    </div>
-
-
-
+<%- include('./partials/layout.ejs') %>
 <%- include ('./partials/footer.ejs') %>
