--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,13 @@
 
-
-<footer class="bg-dark text-center text-white  fixed-bottom">
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2020 Copyright: Bianca Lazzaris
-        
-      </div>
+<footer class="bg-dark container fixed-bottom">
+  <div class="navbar">
+      <a href="#" style="color: white;"> © 2021 - Bianca Lazzaris</a>
+      
+    </div>
 </footer>
+
+
+
 
 <script src="/js/jquery-3.3.1.slim.min.js"></script>
 <script src="/js/popper.min.js"></script>
