--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,13 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda Consular - Seu agendamento online</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/public/css/custom/style.css">
+    <link rel="stylesheet" href="/css/custom/style.css">
 </head>
 
-<body>
+<body">
 
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand  mx-auto" href="#">
-        <img src="/img/logo.jpg" width="150" height="50" alt="">
-    </a>
-</nav>
+    <header class="cabecalho container">
+        <nav class="navbar bg-dark">
+            <a class=" mx-auto" href="/index">
+                <img src="/img/logo.png" width="55% "alt="">
+            </a>
+        </nav>
+    </header>
+</div> 
+</div>
