--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,11 +2,7 @@
 <html lang="pt-br">
 
 <%- include('./partials/header.ejs') %>
-<%- include('./partials/menu.ejs') %>
-    <div class="container">
-        <h5>Meus dados</h5>
-    </div>
-    
+<%- include('./partials/layout.ejs') %>
 
     
 <%- include ('./partials/footer.ejs') %>
