--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 
 <footer class="bg-dark container fixed-bottom">
   <div class="navbar">
-      <a href="#" style="color: white;"> © 2021 - Bianca Lazzaris</a>
+      <small style="color: white;" class="mx-auto"> © 2021 - Bianca Lazzaris</small>
       
     </div>
 </footer>
