--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,14 +8,16 @@
     <title>Agenda Consular - Seu agendamento online</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/custom/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
 </head>
 
 <body">
 
     <header class="cabecalho container">
         <nav class="navbar bg-dark">
-            <a class=" mx-auto" href="/index">
-                <img src="/img/logo.png" width="55% "alt="">
+            <a class="logo mx-auto" href="/index">
+                <img src="/img/logo.png" width="65% "alt="">
             </a>
         </nav>
     </header>
