--- a/public/css/custom/style.css
+++ b/public/css/custom/style.css
@@ -1,8 +1,17 @@
 body {
-    font-family: sans-serif;
+    font-family: 'Lora', serif;
     margin: 0;
-  }
+}
   
 .container {
     padding: 0;
+}
+
+.bg-body{
+  background-color: #78ad7b;
+  min-height: 850px;
+}
+
+.aside a {
+  font-size: small;
 }
