--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,5 +2,30 @@
 <html lang="pt-br">
 
 <%- include('./partials/header.ejs') %>
-<%- include('./partials/layout.ejs') %>
+
+<div class="container bg-body">
+    <div class="d-flex justify-content-around">
+        <%- include('./partials/menu.ejs') %>
+        <div class="container p-4">
+            <h1>Index </h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam ipsum autem harum dolor voluptatum unde ipsa possimus illum hic praesentium, culpa non, reprehenderit doloremque ab dolore assumenda obcaecati beatae.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, possimus! Itaque corrupti quis consequuntur quia dicta amet voluptatibus debitis tenetur perferendis, magni autem praesentium veritatis reiciendis quibusdam harum dolore. Et.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas distinctio, nemo libero nesciunt culpa nisi commodi ullam dicta voluptatibus vel unde corporis in velit minima, officia soluta autem ex error!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque dolores omnis vero similique temporibus suscipit ut enim vel, illum quisquam aspernatur placeat minus tenetur officia molestias provident numquam, architecto nisi.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam ipsum autem harum dolor voluptatum unde ipsa possimus illum hic praesentium, culpa non, reprehenderit doloremque ab dolore assumenda obcaecati beatae.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, possimus! Itaque corrupti quis consequuntur quia dicta amet voluptatibus debitis tenetur perferendis, magni autem praesentium veritatis reiciendis quibusdam harum dolore. Et.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas distinctio, nemo libero nesciunt culpa nisi commodi ullam dicta voluptatibus vel unde corporis in velit minima, officia soluta autem ex error!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque dolores omnis vero similique temporibus suscipit ut enim vel, illum quisquam aspernatur placeat minus tenetur officia molestias provident numquam, architecto nisi.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam ipsum autem harum dolor voluptatum unde ipsa possimus illum hic praesentium, culpa non, reprehenderit doloremque ab dolore assumenda obcaecati beatae.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, possimus! Itaque corrupti quis consequuntur quia dicta amet voluptatibus debitis tenetur perferendis, magni autem praesentium veritatis reiciendis quibusdam harum dolore. Et.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas distinctio, nemo libero nesciunt culpa nisi commodi ullam dicta voluptatibus vel unde corporis in velit minima, officia soluta autem ex error!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque dolores omnis vero similique temporibus suscipit ut enim vel, illum quisquam aspernatur placeat minus tenetur officia molestias provident numquam, architecto nisi.
+            </p>
+
+        </div>
+    </div>
+</div>
+
 <%- include ('./partials/footer.ejs') %>
