--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,14 +3,23 @@
 
 <%- include('./partials/header.ejs') %>
 
-<div class="container">
-    <div class="card mx-auto mt-5" style="width: 18rem;">
-        <div class="card-body">
+<div class="container bg-body pt-5">
+    <div class="card mx-auto" style="width: 18rem;">
+        <div class="card-body mx-auto">
           <h5 class="card-title">Bem vindo</h5>
           <h6 class="card-subtitle mb-2 text-muted">Agende seu serviço online</h6>
-          <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
-          <a class="btn btn-secondary" href="/cadastro">Cadastrar</a>
-          <a class="btn btn-secondary" href="/index">Entrar</a>
+
+          <div class="form-group ">
+            <label for="exampleInputEmail1">Endereço de email</label>
+            <input type="email" class="form-control" placeholder="Seu email" id="exampleInputEmail1">
+          </div>
+          <div class="form-group ">
+            <label for="exampleInputPassword1">Senha</label>
+            <input class="form-control" type="password" placeholder="Senha" id="exampleInputPassword1">
+          </div>
+          <a class="btn btn-success" href="/index">Entrar</a>
+          <hr>
+          <a class="btn btn-primary mx-auto" href="/cadastro">Cadastrar</a>
         </div>
       </div>
     
