--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,7 +2,14 @@
 <html lang="pt-br">
 
 <%- include('./partials/header.ejs') %>
-<%- include('./partials/layout.ejs') %>
 
-    
+<div class="container bg-body">
+    <div class="d-flex justify-content-around">
+        <%- include('./partials/menu.ejs') %>
+        <div class="container p-4">
+            <h1>Meu perfil</h1>
+        </div>
+    </div>
+</div>
+
 <%- include ('./partials/footer.ejs') %>
