--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,20 +2,30 @@
 <html lang="pt-br">
 
 <%- include('./partials/header.ejs') %>
-    <div class="container w-50">
-        <h5>Cadastrar-se</h5>
-    </div>
 
-<div class="container w-50">
-    <form>
+  <div class="cadastro container bg-body">
+
+    <div class="container w-50 p-4">
+      <form>
+        <div class="form-group">
+          <label for="example-text-input">Nome completo</label>
+          <input type="text" class="form-control" placeholder="Artisanal kale" id="example-text-input">
+        </div>
         <div class="form-group ">
           <label for="exampleInputEmail1">Endereço de email</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
-          <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
+          <input type="email" class="form-control" placeholder="Seu email" id="exampleInputEmail1">
+        </div>
+        <div class="form-group ">
+          <label for="example-tel-input">Telefone</label>
+          <input class="form-control" type="tel" placeholder="1-(555)-555-5555" id="example-tel-input">
         </div>
         <div class="form-group">
+          <label for="example-cpf">CPF</label>
+          <input class="form-control" type="text" maxlength="14" placeholder="123.456.789-01" id="example-cpf">
+        </div>
+        <div class="form-group ">
           <label for="exampleInputPassword1">Senha</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+          <input class="form-control" type="password" placeholder="Senha" id="exampleInputPassword1">
         </div>
         <div class="form-group form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -23,7 +33,8 @@
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
       </form>
-</div>
+    </div>
 
-    
-<%- include ('./partials/footer.ejs') %>
+  </div>
+
+  <%- include ('./partials/footer.ejs') %>
