--- a/views/view.ejs
+++ b/views/view.ejs
@@ -3,6 +3,13 @@
 
 <%- include('./partials/header.ejs') %>
 
-<%- include('./partials/layout.ejs') %>
+<div class="container bg-body">
+    <div class="d-flex justify-content-around">
+        <%- include('./partials/menu.ejs') %>
+        <div class="container p-4">
+            <h1>Suas solicitações</h1>
+        </div>
+    </div>
+</div>
 
 <%- include ('./partials/footer.ejs') %>
