atualização de páginas e forms

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,29 +3,44 @@
 
 <%- include('./partials/header.ejs') %>
 
-<div class="container bg-body">
-    <div class="d-flex justify-content-around">
-        <%- include('./partials/menu.ejs') %>
-        <div class="container p-4">
-            <h1>Index </h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam ipsum autem harum dolor voluptatum unde ipsa possimus illum hic praesentium, culpa non, reprehenderit doloremque ab dolore assumenda obcaecati beatae.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, possimus! Itaque corrupti quis consequuntur quia dicta amet voluptatibus debitis tenetur perferendis, magni autem praesentium veritatis reiciendis quibusdam harum dolore. Et.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas distinctio, nemo libero nesciunt culpa nisi commodi ullam dicta voluptatibus vel unde corporis in velit minima, officia soluta autem ex error!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque dolores omnis vero similique temporibus suscipit ut enim vel, illum quisquam aspernatur placeat minus tenetur officia molestias provident numquam, architecto nisi.
-            </p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam ipsum autem harum dolor voluptatum unde ipsa possimus illum hic praesentium, culpa non, reprehenderit doloremque ab dolore assumenda obcaecati beatae.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, possimus! Itaque corrupti quis consequuntur quia dicta amet voluptatibus debitis tenetur perferendis, magni autem praesentium veritatis reiciendis quibusdam harum dolore. Et.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas distinctio, nemo libero nesciunt culpa nisi commodi ullam dicta voluptatibus vel unde corporis in velit minima, officia soluta autem ex error!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque dolores omnis vero similique temporibus suscipit ut enim vel, illum quisquam aspernatur placeat minus tenetur officia molestias provident numquam, architecto nisi.
-            </p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam ipsum autem harum dolor voluptatum unde ipsa possimus illum hic praesentium, culpa non, reprehenderit doloremque ab dolore assumenda obcaecati beatae.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, possimus! Itaque corrupti quis consequuntur quia dicta amet voluptatibus debitis tenetur perferendis, magni autem praesentium veritatis reiciendis quibusdam harum dolore. Et.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas distinctio, nemo libero nesciunt culpa nisi commodi ullam dicta voluptatibus vel unde corporis in velit minima, officia soluta autem ex error!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque dolores omnis vero similique temporibus suscipit ut enim vel, illum quisquam aspernatur placeat minus tenetur officia molestias provident numquam, architecto nisi.
-            </p>
+    <div class="container-fluid ">
+        <div class="nav justify-content-end">
+            <a class="btn btn-light m-3" href="/login" >Entrar</a>
+            <a class="btn btn-light m-3" href="/cadastro" >Cadastrar</a>
+        </div>
+        <div class="d-flex justify-content-center">
+            <div class="p-4 m-4 col-6 bg-light ">
+                <!-- <h1>Index </h1>
+                    <br> -->
+                <p>PREZADO USUÁRIO, ANTES DE AGENDAR SUA VISITA ACONSELHAMOS VIVAMENTE LER COM ATENÇÃO A SEÇÃO DO
+                    SITE DEDICADA AO SERVIÇO ESCOLHIDO.
+                    <br>
+                    O CONSULADO NÃO ASSUME RESPONSABILIDADES EM CASO DE NÃO FORNECIMENTO DO SERVIÇO POR CAUSA DE
+                    DOCUMENTAÇÃO INCOMPLETA.
+                    <br>
+                    A APRESENTAÇÃO DOS DOCUMENTOS E DOS DADOS REQUERIDOS, NOS PERMITIRÁ OFERECER UM SERVIÇO MELHOR E
+                    EVITARÁ PERDAS DE TEMPO.
+                    <br>
+                    NÃO SERÃO ADMITIDOS AGENDAMENTOS FEITOS POR TERCEIROS E O CONSULADO DESACONSELHA VIVAMENTE O
+                    RECURSO A SERVIÇOS PAGOS PARA OBTER ESTE AGENDAMENTO QUE É DISPONÍVEL PARA TODOS, ALÉM DE
+                    GRATUITAMENTE, NESTE SITE.
+                </p>
+                <p> Informamos os usuários que, devido as normas de segurança adotadas pela sede consular, é
+                    proibida a entrada no edifício de: armas, aparelhos eletrônicos (computadores, celulares,
+                    tablets e similares), guarda-chuvas, capacetes ou qualquer acessório que esconda o rosto.
+                    <br>
+                    Bolsas, mochilas e outros volumes são vetados. Por tais razões pedimos aos visitantes que se
+                    apresentem na entrada do edifício portando consigo o mínimo indispensável, de forma a evitar
+                    perda de tempo, pois não serão feitas concessões nesse merito.
+                    <br>
+                    Em respeito a esta Instituição os usuários, acompanhantes e visitantes são convidados a portar
+                    trajes adequados ao ambiente consular; não é permitido entrar com roupa inadequada ao ambiente
+                    consular (blusas e bermudas curtas, minissaias, chinelos e chinelos de dedo, vestidos
+                    excessivamente decotados).
+                </p>
 
+            </div>
         </div>
     </div>
-</div>
 
-<%- include ('./partials/footer.ejs') %>
+    <%- include ('./partials/footer.ejs') %>
