--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,9 +14,9 @@
 
 <body">
 
-    <header class="cabecalho container">
+    <header class="cabecalho container-fluid p-0">
         <nav class="navbar bg-dark">
-            <a class="logo mx-auto" href="/index">
+            <a class="logo mx-auto" href="/home">
                 <img src="/img/logo.png" width="65% "alt="">
             </a>
         </nav>
