--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<div class="container w-25">
+<div class="col-3">
     <div class="aside">
         <div class="p-4">
         <div class=" list-group"  id="list-tab" role="tablist">
             <a
-            href="/index" 
-            class="list-group-item list-group-item-action">
-                Home
-            </a>    
+            href="/home" 
+            class=" list-group-item list-group-item-action">
+                Início
+            </a>
             <a
-            href="/perfil/novasolicitacao" 
+            href="/novasolicitacao" 
             class=" list-group-item list-group-item-action">
                 Escolha o serviço
             </a>
             <a 
-            href="/perfil/agendamentos" 
+            href="/agendamentos" 
             class="list-group-item list-group-item-action">
                 Meus agendamentos
             </a>
