--- a/views/view.ejs
+++ b/views/view.ejs
@@ -3,10 +3,10 @@
 
 <%- include('./partials/header.ejs') %>
 
-<div class="container bg-body">
-    <div class="d-flex justify-content-around">
+<div class="container-fluid ">
+    <div class="d-flex justify-content-center">
         <%- include('./partials/menu.ejs') %>
-        <div class="container p-4">
+        <div class="p-4 m-4 col-7 bg-light ">
             <h1>Suas solicitações</h1>
         </div>
     </div>
