--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,26 +3,33 @@
 
 <%- include('./partials/header.ejs') %>
 
-<div class="container bg-body pt-5">
+<div class="container-fluid pt-5">
     <div class="card mx-auto" style="width: 18rem;">
         <div class="card-body mx-auto">
-          <h5 class="card-title">Bem vindo</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Agende seu serviço online</h6>
+          <h5 class="card-title">Bem vindo (a)</h5>
+          <h6 class="card-subtitle mb-3 text-muted">Agende seu serviço consular online</h6>
 
+          <form action="/login" method="POST">
           <div class="form-group ">
             <label for="exampleInputEmail1">Endereço de email</label>
-            <input type="email" class="form-control" placeholder="Seu email" id="exampleInputEmail1">
+            <input 
+            type="email" 
+            class="form-control" 
+            placeholder="Seu email" 
+            id="exampleInputEmail1">
           </div>
           <div class="form-group ">
             <label for="exampleInputPassword1">Senha</label>
-            <input class="form-control" type="password" placeholder="Senha" id="exampleInputPassword1">
+            <input 
+            class="form-control" 
+            type="password" 
+            placeholder="Senha" 
+            id="exampleInputPassword1">
           </div>
-          <a class="btn btn-success" href="/index">Entrar</a>
-          <hr>
-          <a class="btn btn-primary mx-auto" href="/cadastro">Cadastrar</a>
+          <a type="submit" class="btn btn-success" href="/home">Entrar</a>
         </div>
       </div>
-    
+    </form>
 </div>
-    
+
 <%- include ('./partials/footer.ejs') %>
