--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,11 +4,33 @@
 
 <%- include('./partials/header.ejs') %>
 
-<div class="container bg-body">
-    <div class="d-flex justify-content-around">
-        <%- include('./partials/menu.ejs') %>
-        <div class="container p-4">
-            <h1>Nova solicitação</h1>
+<div class="container-fluid">
+    <div class="d-flex justify-content-center">
+    <%- include('./partials/menu.ejs') %>
+        <div class="p-4 m-4 col-5 bg-light ">
+            <form>
+                <div class="form-group col-7">
+                  <label for="exampleFormControlSelect1">Serviço</label>
+                  <select class="form-control" id="exampleFormControlSelect1">
+                    <option>VISTOS (30 minutos)</option>
+                    <option>CIDADANIA (60 minutos)</option>
+                    <option>PASSAPORTES (30 minutos)</option>
+                  </select>
+                </div>
+                <div class="form-group col-12">
+                  <h5>Descrição</h5>
+                  <p>Pedidos de Visto Nacional ou Schengen </p>
+                  <p>Setor responsável pelo recebimento dos pedidos de reconhecimento da cidadania</p>
+                  <p>Setor encarregado da emissão de documentos de viagem (passaportes, Etd, ecc.)</p>
+                </div>
+                <div class="form-group col-5">
+                  <label for="">Data do atendimento</label>
+                  <input class="form-control "  type="date" data-date-format="DD MMMM YYYY" value="2021-07-10">
+                  <label for="">Horário do atendimento</label>
+                  <input class="form-control "  type="time" min="08:00" max="18:00" value="14:00">
+                </div>
+                <button type="submit" class="btn btn-success m-3">Enviar</button>
+            </form>
         </div>
     </div>
 </div>
