--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 
-<footer class="bg-dark container fixed-bottom">
+<footer class="bg-dark container-fluid p-0 fixed-bottom">
   <div class="navbar">
-      <small style="color: white;" class="mx-auto"> © 2021 - Bianca Lazzaris</small>
+      <small style="color: white;" class="mx-auto"> © 2019-2021 - Bianca Lazzaris Desenvolvimento</small>
       
     </div>
 </footer>
