--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,14 +2,16 @@
 <html lang="pt-br">
 
 <%- include('./partials/header.ejs') %>
-
+<% register.forEach(registers=> { %>
 <div class="container-fluid bg-body">
     <div class="d-flex justify-content-center">
         <%- include('./partials/menu.ejs') %>
         <div class="p-4 m-4 col-7 bg-light ">
             <h1>Meu perfil</h1>
+            <p><%= registers.id %></p>
+            <%= registers.nome %>
         </div>
     </div>
 </div>
-
+<% }); %>
 <%- include ('./partials/footer.ejs') %>
