--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 
 <div class="col-3">
+    <% registers.forEach(registers=> { %>
         <div class="aside">
             <div class="p-4">
                 <div class=" list-group" id="list-tab" role="tablist">
@@ -23,4 +24,6 @@
                 </div>
             </div>
         </div>
+    <% }); %>
+
 </div>
