--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <%- include('./partials/header.ejs') %>
-<% register.forEach(registers=> { %>
+<% registers.forEach(registers=> { %>
 <div class="container-fluid bg-body">
     <div class="d-flex justify-content-center">
         <%- include('./partials/menu.ejs') %>
