--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <div class="container-fluid ">
         <div class="nav justify-content-end">
             <a class="btn btn-light m-3" href="/login" >Entrar</a>
-            <a class="btn btn-light m-3" href="/formcadastro" >Cadastrar</a>
+            <a class="btn btn-light m-3" href="/cadastro" >Cadastrar</a>
         </div>
         <div class="d-flex justify-content-center">
             <div class="p-4 m-4 col-6 bg-light ">
