--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -2,28 +2,25 @@
 <html lang="pt-br">
 
 <div class="col-3">
-    <% registers.forEach(registers=> { %>
-        <div class="aside">
-            <div class="p-4">
-                <div class=" list-group" id="list-tab" role="tablist">
-                    <a href="/home" class=" list-group-item list-group-item-action">
-                        Início
-                    </a>
-                    <a href="/novasolicitacao/" class=" list-group-item list-group-item-action">
-                        Escolha o serviço
-                    </a>
-                    <a href="/agendamentos" class="list-group-item list-group-item-action">
-                        Meus agendamentos
-                    </a>
-                    <a href="/perfil/<%= registers.id  %> " class="list-group-item list-group-item-action">
-                        Meu dados
-                    </a>
-                    <a href="/" class="list-group-item list-group-item-action">
-                        Sair
-                    </a>
-                </div>
+    <div class="aside">
+        <div class="p-4">
+            <div class=" list-group" id="list-tab" role="tablist">
+                <a href="/home" class=" list-group-item list-group-item-action">
+                    Início
+                </a>
+                <a href="/novasolicitacao/" class=" list-group-item list-group-item-action">
+                    Escolha o serviço
+                </a>
+                <a href="/agendamentos" class="list-group-item list-group-item-action">
+                    Meus agendamentos
+                </a>
+                <a href="/perfil" class="list-group-item list-group-item-action">
+                    Meu dados
+                </a>
+                <a href="/" class="list-group-item list-group-item-action">
+                    Sair
+                </a>
             </div>
         </div>
-    <% }); %>
-
+    </div>
 </div>
