--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,14 +2,14 @@
 <html lang="pt-br">
 
 <%- include('./partials/header.ejs') %>
-<% registers.forEach(registers=> { %>
+<% register.forEach(register=> { %>
 <div class="container-fluid bg-body">
     <div class="d-flex justify-content-center">
         <%- include('./partials/menu.ejs') %>
         <div class="p-4 m-4 col-7 bg-light ">
-            <h1>Meu perfil</h1>
-            <p><%= registers.id %></p>
-            <%= registers.nome %>
+            <h4>Meu perfil</h4>
+            <p><%= register.id %></p>
+            <p><%= register.nome %></p>
         </div>
     </div>
 </div>
