--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <div class="col-3">
     <div class="aside">
         <div class="p-4">
@@ -14,7 +13,7 @@
                 <a href="/agendamentos" class="list-group-item list-group-item-action">
                     Meus agendamentos
                 </a>
-                <a href="/perfil" class="list-group-item list-group-item-action">
+                <a href="/perfil/:id" class="list-group-item list-group-item-action">
                     Meu dados
                 </a>
                 <a href="/" class="list-group-item list-group-item-action">
