--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,10 +9,11 @@
           <h5 class="card-title">Bem vindo (a)</h5>
           <h6 class="card-subtitle mb-3 text-muted">Agende seu serviço consular online</h6>
 
-          <form action="/login" method="POST">
+          <form action="/loginapp" method="POST">
           <div class="form-group ">
             <label for="exampleInputEmail1">Endereço de email</label>
             <input 
+            name="email"
             type="email" 
             class="form-control" 
             placeholder="Seu email" 
@@ -21,12 +22,13 @@
           <div class="form-group ">
             <label for="exampleInputPassword1">Senha</label>
             <input 
+            name="senha"
             class="form-control" 
             type="password" 
             placeholder="Senha" 
             id="exampleInputPassword1">
           </div>
-          <a type="submit" class="btn btn-success" href="/home">Entrar</a>
+          <button type="submit" clbuttonss="btn btn-success" >Entrar</a>
         </div>
       </div>
     </form>
