--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,16 +2,15 @@
 <html lang="pt-br">
 
 <%- include('./partials/header.ejs') %>
-<% register.forEach(register=> { %>
 <div class="container-fluid bg-body">
     <div class="d-flex justify-content-center">
         <%- include('./partials/menu.ejs') %>
         <div class="p-4 m-4 col-7 bg-light ">
             <h4>Meu perfil</h4>
-            <p><%= register.id %></p>
-            <p><%= register.nome %></p>
+            <p><%= req.params.id %></p>
+            <p></p>
         </div>
     </div>
 </div>
-<% }); %>
+
 <%- include ('./partials/footer.ejs') %>
