--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -4,7 +4,7 @@
     <div class="aside">
         <div class="p-4">
             <div class=" list-group" id="list-tab" role="tablist">
-                <a href="/home" class=" list-group-item list-group-item-action">
+                <a href="/home/:id" class=" list-group-item list-group-item-action">
                     Início
                 </a>
                 <a href="/novasolicitacao/" class=" list-group-item list-group-item-action">
