--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,15 +2,12 @@
 <html lang="pt-br">
 
 <%- include('./partials/header.ejs') %>
-<div class="container-fluid bg-body">
-    <div class="d-flex justify-content-center">
-        <%- include('./partials/menu.ejs') %>
-        <div class="p-4 m-4 col-7 bg-light ">
-            <h4>Meu perfil</h4>
-            <p><%= req.params.id %></p>
-            <p></p>
-        </div>
-    </div>
-</div>
+<div class="container">
+<h1>Meu perfil</h1>
+<h5 > <%= register.nome %> | <%= register.email %></h5>
+<p ><%= register.telefone %></p>
+<a href="#" class="btn btn-primary">Editar perfil</a>
 
+</div>
+<% }); %>
 <%- include ('./partials/footer.ejs') %>
