--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
             placeholder="Senha" 
             id="exampleInputPassword1">
           </div>
-          <button type="submit" clbuttonss="btn btn-success" >Entrar</a>
+          <button type="submit" class="btn btn-success" >Entrar</a>
         </div>
       </div>
     </form>
