--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,10 +3,12 @@
 
 <%- include('./partials/header.ejs') %>
 
-    <div class="container-fluid">
-        <div class="d-flex justify-content-center">
-<%- include('./partials/menu.ejs') %>
-                <div class="p-4 m-4 col-7 bg-light ">
+    <div class="container">
+        <div class="d-flex justify-content-around">
+            <%- include('./partials/menu.ejs') %>
+
+                <div class="p-4 m-4 col-6 bg-light ">
+                    
                     <!-- <h1>Index </h1>
                     <br> -->
                     <p>Bem vindo ao nosso serviço de Agendamento On-Line. ATENÇÂO - excetuando-se o serviço Passaportes
@@ -20,18 +22,6 @@
                         festivo não haverá vagas disponíveis e será necessário aguardar 24 horas para o início de um
                         novo ciclo. 
                         </p>
-                        <p> COMO FAZER UM AGENDAMENTO <br>
-                            1. clicar em "Escolha o Serviço", no alto à esquerda nesta página, para accessar a página de agendamento <br>
-                        2. clicar sobre a interrogação, no lado direito do serviço escolhido, para conhecer a normativa e a documentação necessária <br>
-                        3. clicar sobre o nome do serviço de interesse para accessar o calendário dos dias com vagas disponíveis <br> 
-                        4. caso existam campos a ser preenchidos inserir os dados pedidos, a seguir clicar sobre "CONFIRMAR" <br>
-                        5. caso apareçam dias com coloração verde ou amarela, escolher um e clicar sobre aquela data <br>
-                        6. confirmar a escolha <br>
-                        7. caso apareçam somente datas com coloração vermeçha ou preta, significará
-                        que todo o período disponivel já foi ocupado e que é necessário aguardar um novo ciclo de 24
-                        horas para que sejam disponibilizadas novas vagas.
-                    </p>
-
                 </div>
         </div>
     </div>
