--- a/public/css/custom/style.css
+++ b/public/css/custom/style.css
@@ -18,3 +18,15 @@ h6 {
   font-weight: 600;
   font-style: italic;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+ a:active, a:hover{
+  border-left: green 2px solid ;
+  color: green;
+  text-decoration: none;
+
+}
