--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,8 +4,8 @@
 <%- include('./partials/header.ejs') %>
 <%- include('./partials/menu.ejs') %>
 
-<div class="mt-4 mb-5 container col-6 bg-light">
-    <div class="align-items-center p-3">
+<div class="mt-4 mb-5 p-3 container col-6 bg-light">
+    <div class="align-items-center ">
         <h5>Perfil</h5>
         <hr>
     <div class="form-inline py-1 justify-content-around">
