--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,28 +2,21 @@
 <html lang="pt-br">
 
 <%- include('./partials/header.ejs') %>
-
-    <div class="container">
-        <div class="d-flex justify-content-around">
-            <%- include('./partials/menu.ejs') %>
-
-                <div class="p-4 m-4 col-6 bg-light ">
-                    
-                    <!-- <h1>Index </h1>
-                    <br> -->
-                    <p>Bem vindo ao nosso serviço de Agendamento On-Line. ATENÇÂO - excetuando-se o serviço Passaportes
-                        o agendamento vale somente para si proprio. O interessado que não possa apresentar-se no dia
-                        agendado deverá enviar email ao setor para solicitar o cancelamento. Lembramos a todos que o
-                        serviço de Agendamento On-Line é um aplicativo gerênciado pelo servidor ministerial em Roma e
-                        que, portanto, a abertura de novas vagas acontece de forma totalmente automática. O servidor
-                        abrirá um novo grupo de vagas agendáveis a cada dia, por volta das 24:00 (hora italiana),
-                        fazendo avançar a janela de abertura. Caso o novo dia colocado à disposição seja um dia de
-                        abertura ao público as vagas serão visíveis e utilizáveis, caso seja um dia de fechamento ou
-                        festivo não haverá vagas disponíveis e será necessário aguardar 24 horas para o início de um
-                        novo ciclo. 
-                        </p>
-                </div>
+<%- include('./partials/menu.ejs') %>
+    <div class="mt-4 mb-5 p-3 container col-6 bg-light">
+        <div class="align-items-center ">
+            <div class="bg-light ">
+                <h6>Bem vindo ao nosso serviço de Agendamento On-Line.</h6>
+                <p> ATENÇÂO - excetuando-se o serviço Passaportes o agendamento vale somente para si proprio.  
+                    O interessado que não possa apresentar-se no dia agendado deverá enviar email ao setor para solicitar o cancelamento. Lembramos a todos que o
+                    serviço de Agendamento On-Line é um aplicativo gerênciado pelo servidor ministerial em Roma e
+                    que, portanto, a abertura de novas vagas acontece de forma totalmente automática. O servidor
+                    abrirá um novo grupo de vagas agendáveis a cada dia, por volta das 24:00 (hora italiana),
+                    fazendo avançar a janela de abertura. Caso o novo dia colocado à disposição seja um dia de
+                    abertura ao público as vagas serão visíveis e utilizáveis, caso seja um dia de fechamento ou
+                    festivo não haverá vagas disponíveis e será necessário aguardar 24 horas para o início de um novo ciclo.
+                </p>
+            </div>
         </div>
     </div>
-
 <%- include ('./partials/footer.ejs') %>
