--- a/views/formcadastro.ejs
+++ b/views/formcadastro.ejs
@@ -3,60 +3,83 @@
 
 <%- include('./partials/header.ejs') %>
 
-  <div class="container-fluid p-2 d-flex justify-content-center ">
+  <div class="container-fluid d-flex justify-content-center ">
 
-    <div class="my-3 p-4 col-6 bg-light ">
+    <div class="mt-3 pt-4 px-4 col-6 bg-light ">
       <form action="/salvarcadastro" method="POST">
-        <div class="form-group">
+        <div class="form-row">
+        <div class="form-group col-7">
           <label for="example-text-input">Nome completo</label>
           <input 
-          name="nome"
-          type="text" 
-          class="form-control" 
-          placeholder="Artisanal kale" 
-          id="example-text-input">
+            name="nome"
+            type="text" 
+            class="form-control" 
+            placeholder="Artisanal kale" 
+            id="example-text-input">
         </div>
-        <div class="form-group ">
+        <div class="form-group col-5">
           <label for="exampleInputEmail1">Endereço de email</label>
           <input 
-          name="email"
-          type="email" 
-          class="form-control" 
-          placeholder="eu@gmail.com" 
-          id="exampleInputEmail1">
+            name="email"
+            type="email" 
+            class="form-control" 
+            placeholder="eu@gmail.com" 
+            id="exampleInputEmail1">
         </div>
-        <div class="form-group ">
+        <div class="form-group col-6">
           <label for="example-tel-input">Telefone</label>
           <input 
-          name="tel"
-          class="form-control" 
-          type="tel" 
-          placeholder="4799555-5555" 
-          id="example-tel-input">
+            name="tel"
+            class="form-control" 
+            type="tel" 
+            placeholder="4799555-5555" 
+            id="example-tel-input">
         </div>
-        <div class="form-group">
+        <div class="form-group col-6">
           <label for="example-cpf">CPF</label>
           <input 
-          name="cpf"
-          class="form-control" 
-          type="text" maxlength="14" 
-          placeholder="123.456.789-01" 
-          id="example-cpf">
+            name="cpf"
+            class="form-control" 
+            type="text" maxlength="14" 
+            placeholder="123.456.789-01" 
+            id="example-cpf">
         </div>
-        <div class="form-group ">
+        <div class="form-group col-6">
+          <label for="example-cpf">RNE</label>
+          <input 
+            name="rne"
+            class="form-control" 
+            type="text" maxlength="14" 
+            placeholder="844.852-66" 
+            id="example-cpf">
+        </div>
+        <div class="form-group col-6">
+          <label for="example-tel-input">Passaporte</label>
+          <input 
+            name="passaporte"
+            class="form-control" 
+            type="tel" 
+            placeholder="896.335" 
+            id="example-tel-input">
+        </div>
+        <div class="form-group col-5">
           <label for="exampleInputPassword1">Senha</label>
           <input 
-          name="senha"
-          class="form-control" 
-          type="password" 
-          placeholder="123SenhaFort3" 
-          id="exampleInputPassword1">
+            name="senha"
+            class="form-control" 
+            type="password" 
+            placeholder="123SenhaFort3" 
+            id="exampleInputPassword1">
         </div>
+      </div>
         <div class="form-group form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1">Aceito os termos de uso e privacidade.</label>
         </div>
-        <button type="submit" class="btn btn-success my-4"> Enviar</button>
+        <div>
+          <a href="/" class="btn btn-secondary">Cancelar</a>
+        <button type="submit" class="btn btn-success my-3"> Enviar</button>
+      </div>
       </form>
     </div>
   </div>
